converting everything into components as in unity

--- a/2D Game Engine/2D Game Engine.vcxproj
+++ b/2D Game Engine/2D Game Engine.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="imconfig.h" />
