Input now streamlined

--- a/2D Game Engine/2D Game Engine.vcxproj.filters
+++ b/2D Game Engine/2D Game Engine.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="MagicMovement.h">
       <Filter>Example Files</Filter>
     </ClInclude>
+    <ClInclude Include="InputData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
