some code refactoring and optimizations

--- a/Game Implementation/Game Implementation.vcxproj
+++ b/Game Implementation/Game Implementation.vcxproj
@@ -124,6 +124,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MagicObjectScaler.h" />
     <ClInclude Include="PlayerMagicController.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
