--- a/Game Implementation/Game Implementation.vcxproj.filters
+++ b/Game Implementation/Game Implementation.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="PlayerMagicController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MagicObjectScaler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
