object spawning now possible

--- a/Game Implementation/Game Implementation.vcxproj.filters
+++ b/Game Implementation/Game Implementation.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="MagicObjectScaler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectSpawner.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
