--- a/2D Game Engine/2D Game Engine.vcxproj.filters
+++ b/2D Game Engine/2D Game Engine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="AudioManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SoundSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -129,6 +132,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AudioManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
