added scene loading completly as well as added engine logo

--- a/Game Implementation/Game Implementation.vcxproj
+++ b/Game Implementation/Game Implementation.vcxproj
@@ -134,6 +134,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InitialSceneLogic.h" />
     <ClInclude Include="MagicObjectScaler.h" />
     <ClInclude Include="ObjectSpawner.h" />
     <ClInclude Include="PlayerMagicController.h" />
