--- a/Para Engine Editor/Para Engine Editor.vcxproj
+++ b/Para Engine Editor/Para Engine Editor.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="imgui_impl_glfw_gl3.cpp" />
     <ClCompile Include="MainApp.cpp" />
     <ClCompile Include="PropertyPanel.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HierarchyPanel.h" />
@@ -134,6 +135,7 @@
     <ClInclude Include="imgui_impl_glfw_gl3.h" />
     <ClInclude Include="imgui_internal.h" />
     <ClInclude Include="PropertyPanel.h" />
+    <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="stb_rect_pack.h" />
     <ClInclude Include="stb_textedit.h" />
     <ClInclude Include="stb_truetype.h" />
