--- a/Para Engine Editor/Para Engine Editor.vcxproj.filters
+++ b/Para Engine Editor/Para Engine Editor.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="FileExplorer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditorSceneViewManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui_impl_glfw_gl3.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FileExplorer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EditorSceneViewManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
