--- a/Para Engine Editor/imgui.ini
+++ b/Para Engine Editor/imgui.ini
@@ -4,8 +4,8 @@ Size=545,335
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=170,30
-Size=584,452
+Pos=145,90
+Size=502,353
 Collapsed=0
 
 [Window][Another Window]
@@ -19,8 +19,8 @@ Size=395,194
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=760,23
-Size=280,617
+Pos=1087,22
+Size=279,723
 Collapsed=0
 
 [Window][Style Editor]
@@ -79,7 +79,12 @@ Size=200,350
 Collapsed=0
 
 [Window][Property Panel]
-Pos=0,460
-Size=760,180
+Pos=0,567
+Size=1079,178
+Collapsed=0
+
+[Window][Hierarchy Panel]
+Pos=1079,22
+Size=287,723
 Collapsed=0
 
