bug fixes and resource management in ed itor now more streamlined

--- a/Para Engine Editor/imgui.ini
+++ b/Para Engine Editor/imgui.ini
@@ -4,8 +4,8 @@ Size=545,335
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=145,90
-Size=495,319
+Pos=98,37
+Size=609,385
 Collapsed=0
 
 [Window][Another Window]
@@ -14,8 +14,8 @@ Size=471,261
 Collapsed=0
 
 [Window][ImGui Metrics]
-Pos=399,83
-Size=395,194
+Pos=485,89
+Size=457,274
 Collapsed=0
 
 [Window][Hierarchy]
@@ -29,17 +29,17 @@ Size=608,415
 Collapsed=0
 
 [Window][Same title as another window##2]
-Pos=359,211
+Pos=435,193
 Size=449,61
 Collapsed=0
 
 [Window][###AnimatedTitle]
-Pos=358,273
+Pos=395,326
 Size=447,154
 Collapsed=0
 
 [Window][Same title as another window##1]
-Pos=117,357
+Pos=94,325
 Size=492,102
 Collapsed=0
 
@@ -59,8 +59,8 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Auto-resizing window]
-Pos=319,47
-Size=620,348
+Pos=372,14
+Size=418,512
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -79,12 +79,17 @@ Size=200,350
 Collapsed=0
 
 [Window][Property Panel]
-Pos=0,427
-Size=751,213
+Pos=0,460
+Size=760,180
 Collapsed=0
 
 [Window][Hierarchy Panel]
-Pos=751,22
-Size=289,618
+Pos=760,22
+Size=280,618
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=250,186
+Size=538,98
 Collapsed=0
 
